<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="STATE_MACHINE" Id="{1a275fdd-adc3-4480-838a-4253a7626e42}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM STATE_MACHINE
VAR
	timer: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF ( CTRL.sdo = TRUE)THEN
	timer(IN:=TRUE);
	IF (timer.Q = TRUE) THEN
		CASE CTRL.in_opmode OF
			MODE.PROFILE_POSITION:
				Position_profile();	
			MODE.PROFILE_VELOCITY:
				Velocity_profile();
			MODE.TORQUE_PROFILE:
				Torque_profile();
			MODE.CYCLIC_SYNC_POS:
				Cyclic_sync_pos();
			MODE.CYCLIC_SYNC_VEL:
				Cyclic_sync_vel();
			MODE.CYCLIC_SYNC_TORQ:
				Cyclic_sync_torq();	
		ELSE
			CTRL.error:= PLC_ERROR.MODE_NO_SETUP;		
		END_CASE	
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="STATE_MACHINE">
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="29" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="59" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>